🐛fix(command-palette) correct specificity for ng-scrollbar

--- a/packages/common/src/components/command-palette/command-palette.component.scss
+++ b/packages/common/src/components/command-palette/command-palette.component.scss
@@ -42,7 +42,7 @@
     }
 }
 
-ng-scrollbar {
+ng-scrollbar.ng-scrollbar {
     --scrollbar-padding: 0px;
     --scrollbar-size: 14px;
     --scrollbar-border-radius: 0;
